--- a/src/fragments/SkillList/SkillList.css
+++ b/src/fragments/SkillList/SkillList.css
@@ -7,6 +7,7 @@
 .skill-list-container-header {
   display: flex;
   gap: 0.25rem;
+  flex-wrap: wrap;
   border-bottom: 2px solid;
   padding-bottom: 0.25rem;
   margin-bottom: 0.25rem;
